Update: stability and performance improvements

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
     "noImplicitReturns": true,
     "noUnusedParameters": true,
     "paths": {
+      "@apis/*": [
+        "src/apis/*"
+      ],
       "@components/*": [
         "src/components/*"
       ],
