--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^5.0.0-alpha.32",
+    "@material-ui/core": "^5.0.0-alpha.33",
     "@material-ui/icons": "^5.0.0-alpha.29",
     "idb-keyval": "^5.0.5",
     "react": "^17.0.2",
@@ -14,14 +14,15 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.5",
-    "@types/react-dom": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
-    "eslint": "^7.25.0",
+    "@types/react-dom": "^17.0.4",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
+    "eslint": "^7.26.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.23.2",
     "typescript": "^4.2.4",
-    "vite": "^2.2.4"
+    "vite": "^2.3.0"
   },
   "scripts": {
     "start": "vite build --watch",
